--- a/aa_times/app/views/shared/_main_nav.html.erb
+++ b/aa_times/app/views/shared/_main_nav.html.erb
@@ -20,8 +20,9 @@
 			<li id="login-btn">
 				<button>Log In</button>
 			</li>
-			<li id="gear-dropdown">
-				<button id="gear-dropdown-btn"><i class="fa fa-cogs"></i></button>
+			<li id="gear-dropdown-btn">
+				<i class="fa fa-cogs"></i>
+				<%= render partial: 'shared/gear_dropdown' %>
 			</li>
 		</ul>
 	</nav>
